--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.7",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.9",
