--- a/package.json
+++ b/package.json
@@ -20,17 +20,21 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.7",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "country-flag-icons": "^1.5.9",
+    "date-fns": "^3.6.0",
     "dateformat": "^5.0.3",
     "framer-motion": "^11.0.22",
     "next": "^14.2.4",
     "next-themes": "^0.2.1",
     "react": "18.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.1",
     "react-icons": "^5.0.1",
     "sonner": "^1.5.0",
+    "swr": "^2.3.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
