--- a/package.json
+++ b/package.json
@@ -1,54 +1,49 @@
 {
   "name": "indio-bjj",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
+    "postbuild": "next-sitemap",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.1.2",
-    "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-checkbox": "^1.0.4",
-    "@radix-ui/react-collapsible": "^1.0.3",
-    "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.2",
-    "@radix-ui/react-popover": "^1.0.7",
-    "@radix-ui/react-separator": "^1.0.3",
-    "@radix-ui/react-slot": "^1.0.2",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.7",
+    "@notionhq/client": "^3.1.3",
+    "@vercel/analytics": "^1.5.0",
+    "@vercel/speed-insights": "^1.2.0",
+    "axios": "^1.10.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "country-flag-icons": "^1.5.9",
-    "date-fns": "^3.6.0",
+    "country-flag-icons": "^1.5.19",
     "dateformat": "^5.0.3",
-    "framer-motion": "^11.0.22",
-    "next": "^14.2.4",
-    "next-themes": "^0.2.1",
-    "react": "18.2.0",
-    "react-day-picker": "^8.10.0",
-    "react-dom": "18.2.0",
-    "react-hook-form": "^7.46.1",
-    "react-icons": "^5.0.1",
-    "sonner": "^1.5.0",
+    "dompurify": "^3.2.6",
+    "framer-motion": "^12.18.1",
+    "next": "15.4.0",
+    "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-day-picker": "^9.7.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.58.1",
+    "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
+    "react-medium-image-zoom": "^5.2.14",
     "swr": "^2.3.3",
-    "tailwind-merge": "^2.2.2",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "@rocketseat/eslint-config": "^2.1.0",
-    "@types/dateformat": "^5.0.0",
-    "@types/node": "20.6.1",
-    "@types/react": "18.2.21",
-    "@types/react-dom": "18.2.7",
-    "autoprefixer": "10.4.15",
-    "eslint": "^8.49.0",
-    "eslint-config-next": "13.4.19",
-    "postcss": "^8.4.38",
-    "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/dateformat": "^5.0.3",
+    "@types/node": "^24.0.3",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.29.0",
+    "eslint-config-next": "15.3.3",
+    "tailwindcss": "^4.1.10",
+    "typescript": "^5.8.3"
   }
 }
